apps/demo/base/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-api
spec:
  selector:
    app: demo-api
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
