apps/demo/base/service-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-client
spec:
  selector:
    app: demo-client
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
