apps/demo/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
spec:
  ingressClassName: nginx
  rules:
    - host: demo.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: demo-api
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-client
                port:
                  number: 80
